<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:padding="@dimen/view_margin">

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_frame"
        android:hint="@string/searchbar_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/tvPinned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <TextView
        android:id="@+id/tvPinned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pinned"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@+id/pinnedItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pinnedItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:spanCount="2"
        app:layout_constraintBottom_toTopOf="@+id/tvOther"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPinned"
        tools:listitem="@layout/item_todo" />

    <TextView
        android:id="@+id/tvOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toTopOf="@+id/otherItems"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinnedItems" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/otherItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:spanCount="2"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOther"
        tools:listitem="@layout/item_todo"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_button_speakable_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherItems"
        app:srcCompat="@drawable/ic_add"
        app:backgroundTint="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>